Add Sign, Bird, Poop, and the start of Sensor

--- a/frontend/src/app/editor/editor.component.html
+++ b/frontend/src/app/editor/editor.component.html
@@ -20,7 +20,7 @@
     </tr>
     <tr>
       <td>Text:</td>
-      <td><input type='text' [(ngModel)]='currentText' /></td>
+      <td><input type='text' id='text' [(ngModel)]='currentText' /></td>
     </tr>
     <tr>
       <td>Powered:</td>
